--- a/css/ribbon.css
+++ b/css/ribbon.css
@@ -1,11 +1,13 @@
 #ribbonMaze {
   height: 120px;
-  width: 800px;
-  background-color: grey;
-  // border: solid black;
-  // border-width: 7px 7px 7px 7px;
-  // position: absolute;
+  width: 100%;
+  /* 
+   background-color: grey;
+   border: solid black;
+   border-width: 7px 7px 7px 7px;
+   position: absolute;
   z-index: -1000;
+  */
 }
 
 .flex-container {
