--- a/css/ribbon.css
+++ b/css/ribbon.css
@@ -1,6 +1,12 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 #ribbonMaze {
   height: 120px;
   width: 100%;
+  background-color: darkgray;
+
   /* 
    background-color: grey;
    border: solid black;
