--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,79 @@
-* {
+*, *::before, *::after {
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+/*
+#ribbonMaze {
+  height: 420px;
+  width: 100%;
+  background-color: darkgray;
+}
+*/
+
+.cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 60px;
+  border: 10px solid red;
 }
 
-#ribbonMaze {
-  background-color: darkgray;
+#stickfig {
+  width: 36x;
+  height: 36px;
+  margin: auto;
+  display: block;
+}
+
+.flex-container {
+  display: flex;
+  height: 100px;
+}
+
+.flex-child {
+  flex: 1;
+  border: 2px solid red;
+}  
+
+.flex-child:first-child {
+  margin-right: 0px;
+} 
+
+.mazeSquare {
+  height: 33px;
+  width: 33px;
+  background-color: hotpink;
+  border: solid black;
+  border-width: 7px 7px 7px 7px;
+}
+
+.float-container {
+  width: auto;
+  height: 200px;
+  border: 3px solid #000000;
+  padding: 20px;
+}
+
+.float-child {
+  width: 50%;
+  float: left;
+  padding: 20px;
+  border: 2px solid red;
+}  
+
+.cell-rm-t {
+  border-top: 0;
+}
+
+.cell-rm-r {
+  border-right: 0;
+}
+
+.cell-rm-b {
+  border-bottom: 0;
+}
+
+.cell-rm-l {
+  border-left: 0;
 }
